# alexandria

./: .dockerignore  .gitignore  CLAUDE.md  GLOSSARY.md  README.md
doc/: data-sources.md  event-detection.md  knowledge-graph.md  libraries.md  ml-techniques.md  natural-disasters.md  pipeline-architecture.md  python-patterns.md
docker/: base.Dockerfile
docker/local/: docker-compose.yml
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/archive/: ArchiveCard.tsx
frontend/src/components/attribution/: AttributionArticleRow.tsx  AttributionArticleTable.tsx  AttributionFilters.tsx  AttributionStatsGrid.tsx  AttributionTab.tsx  EntityRoleEditor.tsx  RoleSchemaTab.tsx  attributionHelpers.ts
frontend/src/components/graph/: EntityPopup.tsx  (+5 more)
frontend/src/config/: buildPipelineGraph.ts  pipelineTopology.ts
frontend/src/data/: mock-events.ts  mock-metrics.ts
frontend/src/hooks/: useArchive.ts  useArticleDetail.ts  useAttribution.ts  useClassificationLabels.ts  useConflictEvents.ts  useCrudResource.ts  useDashboardArticles.ts  useDetectedEvents.ts  useEntityRoleTypes.ts  useEventDetail.ts  useInfraStatus.ts  useLabelling.ts  useLogStream.ts  useNaturalDisasters.ts  usePolling.ts  useRelationGraph.ts  useRelationTypes.ts  useTopology.ts  useWikiSummary.ts
frontend/src/pages/: AffiliationGraphPage.tsx  ArchivePage.tsx  ArticleDetailPage.tsx  AttributionPage.tsx  GlobalOverviewPage.tsx  InfrastructurePage.tsx  LabellingPage.tsx  MonitorPage.tsx  TerminalPage.tsx
frontend/src/types/: archive.ts  attribution.ts  classification.ts  conflict.ts  dashboard.ts  disaster.ts  event.ts  graph.ts  infrastructure.ts  labelling.ts  leaflet.heat.d.ts  pipeline.ts
frontend/src/utils/: adaptEventArticle.ts  buildRefId.ts  color.ts  formatDate.ts
services/article-fetcher/: Dockerfile  pyproject.toml
services/article-fetcher/src/article_fetcher/: __init__.py  __main__.py  base.py  dedup.py  models.py  publish.py  runner.py
services/article-fetcher/src/article_fetcher/sources/: aljazeera.py  dw.py  rss.py
services/article-fetcher/tests/: test_aljazeera.py  test_dedup.py  test_dw.py  test_models.py  test_publish.py  test_rss.py  test_runner.py
services/article-scraper/: Dockerfile  pyproject.toml
services/article-scraper/src/article_scraper/: __init__.py  __main__.py  consumer.py  models.py  publish.py  scraper.py
services/article-scraper/tests/: test_consumer.py  test_main.py  test_models.py  test_publish.py  test_scraper.py
services/article-store/: Dockerfile  pyproject.toml
services/article-store/scripts/: export_articles.py  import_labels.py
services/article-store/src/article_store/: __main__.py  conflict_consumer.py  consumer.py  disaster_consumer.py  label_updater.py  logging.py  schema.py  store.py
services/article-store/tests/: test_consumer.py  test_label_updater.py  test_store.py
services/entity-resolver/: Dockerfile  pyproject.toml
services/entity-resolver/data/: aliases.json
services/entity-resolver/src/entity_resolver/: __init__.py  __main__.py  alias_table.py  consumer.py  logging.py  models.py  publish.py  resolver.py
services/entity-resolver/tests/: test_alias_table.py  test_main.py  test_resolver.py
services/event-detector/: Dockerfile  pyproject.toml
services/event-detector/src/event_detector/: __main__.py  detector.py  logging.py  models.py  naming.py  queries.py
services/event-detector/tests/: test_detector.py  test_naming.py  test_queries.py
services/gdelt-fetcher/: Dockerfile  pyproject.toml
services/gdelt-fetcher/src/gdelt_fetcher/: __main__.py  dedup.py  fetcher.py  models.py  publish.py  runner.py
services/gdelt-fetcher/tests/: test_fetcher.py
services/monitoring-api/: Dockerfile  pyproject.toml
services/monitoring-api/src/monitoring_api/: __main__.py  article_client.py  conflict_client.py  db_client.py  disaster_client.py  docker_client.py  event_client.py  graph_client.py  label_client.py  log_streamer.py  rabbitmq_client.py  relation_type_client.py  role_type_client.py  server.py  topology_builder.py
services/monitoring-api/tests/: test_archive.py  test_attribution.py  test_dashboard.py  test_event_client.py  test_graph.py  test_label_endpoints.py  test_labelling.py  test_log_streamer.py  test_server.py  test_topology_builder.py
services/nasa-eonet-fetcher/: Dockerfile  pyproject.toml
services/nasa-eonet-fetcher/tests/: test_fetcher.py
services/ner-tagger/: Dockerfile  pyproject.toml
services/ner-tagger/tests/: test_consumer.py  test_main.py  test_models.py  test_publish.py  test_tagger.py
services/osint-geo-fetcher/: Dockerfile  pyproject.toml
services/osint-geo-fetcher/src/osint_geo_fetcher/: __init__.py  __main__.py  dedup.py  fetcher.py  models.py  publish.py  runner.py
services/osint-geo-fetcher/tests/: test_fetcher.py  test_models.py
services/relation-extractor/: Dockerfile  pyproject.toml
services/relation-extractor/src/relation_extractor/: __main__.py  consumer.py  extractor.py  labels.py  logging.py  neo4j_writer.py
services/relation-extractor/tests/: test_consumer.py  test_extractor.py  test_labels.py  test_main.py  test_neo4j_writer.py
services/role-classifier/: Dockerfile  pyproject.toml
services/role-classifier/src/role_classifier/: __main__.py  classifier.py  consumer.py  labels.py  logging.py  publish.py
services/role-classifier/tests/: test_classifier.py  test_consumer.py  test_labels.py  test_main.py  test_publish.py
services/topic-tagger/: Dockerfile  pyproject.toml
services/topic-tagger/tests/: test_classifier.py  test_consumer.py  test_labels.py  test_main.py  test_publish.py
services/ucdp-fetcher/: Dockerfile  pyproject.toml
services/ucdp-fetcher/src/ucdp_fetcher/: __init__.py  __main__.py  fetcher.py  models.py  publish.py  runner.py
services/ucdp-fetcher/tests/: test_fetcher.py
ux/: DESIGN.md  affiliation_graph.html  classification_type.html  classifiction_ingestion.html  global_overview.html  infrastructure_monitor.html  labelling.html  signal_archive.html  terminal.html
(+61 files in other folders)
