[project]
name = "article-fetcher"
version = "0.1.0"
description = "Article collection service for Alexandria — fetches articles from external sources"
requires-python = ">=3.13"
dependencies = ["feedparser>=6.0", "pika>=1.3", "redis>=5.0"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.11"]

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
